--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,52 @@
+annotated-types==0.7.0
 asgiref==3.8.1
+beautifulsoup4==4.12.3
+blis==1.2.0
+bs4==0.0.2
+catalogue==2.0.10
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpathlib==0.20.0
+confection==0.1.5
+cymem==2.0.10
 Django==5.1.4
+futures==3.0.5
+goslate==1.5.4
+idna==3.10
+Jinja2==3.1.5
+langcodes==3.5.0
+language_data==1.3.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+murmurhash==1.0.11
+nl_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/nl_core_news_sm-3.8.0/nl_core_news_sm-3.8.0-py3-none-any.whl#sha256=a76978477821f213ca76a46c686df1b1d41462905d4868bc53eac086adca8b7e
+numpy==2.2.1
+packaging==24.2
+preshed==3.0.9
+pydantic==2.10.5
+pydantic_core==2.27.2
+PyDictionary==2.0.1
+Pygments==2.19.1
 PyYAML==6.0.2
+requests==2.32.3
+rich==13.9.4
+setuptools==75.8.0
+shellingham==1.5.4
+smart-open==7.1.0
+soupsieve==2.6
+spacy==3.8.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 sqlparse==0.5.3
+srsly==2.5.0
+thinc==8.3.4
+tqdm==4.67.1
+typer==0.15.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+wasabi==1.1.3
+weasel==0.4.1
+wrapt==1.17.2
